--- a/MultiDirectionCollectionView/Base.lproj/Customviewboard2.xib
+++ b/MultiDirectionCollectionView/Base.lproj/Customviewboard2.xib
@@ -110,7 +110,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="Column"/>
+                    <state key="normal" title="Insert Column"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-93-fUG">
                     <rect key="frame" x="9" y="205" width="143" height="23"/>
